--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/kv": "^3.0.0",
     "airtable": "^0.12.2",
+    "axios": "^1.11.0",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
