--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "crons": [
-    {
-      "path": "/api/refresh-token",
-      "schedule": "30 2 * * *"
-    }
-  ]
+  "crons": [{ "path": "/api/upstox/request-token", "schedule": "30 2 * * *" }]
 }
