--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vercel/kv": "^3.0.0",
     "airtable": "^0.12.2",
     "axios": "^1.11.0",
